@@ -39,4 +39,22 @@
     {
         font-weight: bold;
     }
+
+    #gamefox-tracked-note
+    {
+        margin: 10px !important;
+        padding: 3px !important;
+        border: 1px #aaa solid;
+        background: #eee;
+    }
+
+    #gamefox-tracked-note-dismiss
+    {
+        color: #000 !important;
+        font-size: 1.5em;
+        line-height: .8em; /* set to height of #gamefox-tracked-note in JS */
+        padding: 0 5px;
+        margin: -3px -3px -3px 3px;
+        float: right;
+    }
 }
